--- a/Java/Java-Concurrency-in-Practice/第11章 性能与可伸缩性.md
+++ b/Java/Java-Concurrency-in-Practice/第11章 性能与可伸缩性.md
@@ -92,3 +92,173 @@
 
 3. 由于锁竞争而导致阻塞时, 线程在持有锁时将存在一定的开销, 当它释放锁时, 必须告诉操作系统恢复运行阻塞的线程.
 
+### 11.4 减少锁的竞争
+
+> 在并发程序中, 对可伸缩性的最主要威胁就是独占方式的资源锁
+
+降低锁的竞争程度
+
+* 减少锁的持有时间
+
+* 降低锁的请求频率
+
+* 使用带有协调机制的独占锁, 这些机制允许更高的并发性
+
+#### 11.4.1 缩小锁的范围("快进快出")
+
+``` java
+@ThreadSafe
+public class ServerStatusBeforeSplit {
+    @GuardedBy("this")
+    public final Set<String> users;
+    @GuardedBy("this")
+    public final Set<String> queries;
+
+    public ServerStatusBeforeSplit() {
+        users = new HashSet<String>();
+        queries = new HashSet<String>();
+    }
+
+    public synchronized void addUser(String u) {
+        users.add(u);
+    }
+
+    public synchronized void addQuery(String q) {
+        queries.add(q);
+    }
+
+    public synchronized void removeUser(String u) {
+        users.remove(u);
+    }
+
+    public synchronized void removeQuery(String q) {
+        queries.remove(q);
+    }
+}
+
+@ThreadSafe
+public class ServerStatusAfterSplit {
+    @GuardedBy("users")
+    public final Set<String> users;
+    @GuardedBy("queries")
+    public final Set<String> queries;
+
+    public ServerStatusAfterSplit() {
+        users = new HashSet<String>();
+        queries = new HashSet<String>();
+    }
+
+    public void addUser(String u) {
+        synchronized (users) {
+            users.add(u);
+        }
+    }
+
+    public void addQuery(String q) {
+        synchronized (queries) {
+            queries.add(q);
+        }
+    }
+
+    public void removeUser(String u) {
+        synchronized (users) {
+            users.remove(u);
+        }
+    }
+
+    public void removeQuery(String q) {
+        synchronized (users) {
+            queries.remove(q);
+        }
+    }
+}
+```
+
+#### 11.4.2 减小锁的粒度
+
+> 降低线程请求锁的频率可以通过锁分段和锁分解来实现, 但是使用的锁越多, 发生死锁的风险就越高
+
+对于两个独立的共享状态可采用锁分解技术, 对于有依赖的两个共享状态不可以使用锁分解技术
+
+#### 11.4.3 锁分段
+
+锁分解技术进一步拓展为对一组独立对象上的锁进行分解, 这种情况成为锁分段
+
+``` java
+@ThreadSafe
+public class StripedMap {
+    // Synchronization policy: buckets[n] guarded by locks[n%N_LOCKS]
+    private static final int N_LOCKS = 16;
+    private final Node[] buckets;
+    private final Object[] locks;
+
+    public StripedMap(int numBuckets) {
+        buckets = new Node[numBuckets];
+        locks = new Object[N_LOCKS];
+        for (int i = 0; i < N_LOCKS; i++)
+            locks[i] = new Object();
+    }
+
+    private final int hash(Object key) {
+        return Math.abs(key.hashCode() % buckets.length);
+    }
+
+    public Object get(Object key) {
+        int hash = hash(key);
+        synchronized (locks[hash % N_LOCKS]) {
+            for (Node m = buckets[hash]; m != null; m = m.next)
+                if (m.key.equals(key))
+                    return m.value;
+        }
+        return null;
+    }
+
+    public void clear() {
+        for (int i = 0; i < buckets.length; i++) {
+            synchronized (locks[i % N_LOCKS]) {
+                buckets[i] = null;
+            }
+        }
+    }
+
+    private static class Node {
+        Node next;
+        Object key;
+        Object value;
+    }
+}
+```
+
+#### 11.4.4 避免热点域
+
+#### 11.4.5 一些替代独占锁的方法
+
+使用并发容器, 读写锁, 不可变对象, 以及原子变量
+
+#### 11.4.6 监测CPU利用率
+
+CPU没有充分利用, 有以下几种原因
+
+* 负载不充足
+
+* I/O密集
+
+* 外部限制 (例如数据库连接)
+
+* 锁竞争
+
+#### 11.4.7 向对象池说"不"
+
+对象池可以用来缓存一些创建昂贵的对象(数据库连接, 线程等), 通常, 对象分配操作的开销比同步的开销更低
+
+### 11.5 示例: 比较Map的性能
+
+多线程环境下, 优先使用并发容器, 而不要使用同步容器
+
+### 11.6 减少上下文切换的开销
+
+当任务在阻塞和运行之间转换时, 就相当于一次上下文切换, 阻塞和上下文切换回干扰线程的正常运行
+
+### 小结
+
+使用线程是为了利用多处理器的计算能力, 因此在并发程序性能的讨论中, 通常更多地将侧重点放在吞吐量和可伸缩性上, 而不是服务时间. Amdahl定律说明, 程序的可伸缩性取决于代码中必须被串行执行的代码比例, 因此尽量降低独占锁的使用
