提交第七章笔记

--- a/Java/Java-Concurrency-in-Practice/第07章 取消与关闭.md
+++ b/Java/Java-Concurrency-in-Practice/第07章 取消与关闭.md
@@ -557,3 +557,172 @@ public class CheckForMail {
 ```
 
 #### 7.2.5 shutdownNow的局限性
+
+在Executor中跟踪关闭之后被取消的任务, 需要任务在取消时保存线程中断状态
+
+``` java
+public class TrackingExecutor extends AbstractExecutorService {
+    private final ExecutorService exec;
+    private final Set<Runnable> tasksCancelledAtShutdown =
+            Collections.synchronizedSet(new HashSet<>());
+
+    public TrackingExecutor(ExecutorService exec) {
+        this.exec = exec;
+    }
+
+    @Override
+    public void shutdown() {
+        exec.shutdown();
+    }
+
+    @Override
+    public List<Runnable> shutdownNow() {
+        return exec.shutdownNow();
+    }
+
+    @Override
+    public boolean isShutdown() {
+        return exec.isShutdown();
+    }
+
+    @Override
+    public boolean isTerminated() {
+        return exec.isTerminated();
+    }
+
+    @Override
+    public boolean awaitTermination(long timeout, TimeUnit unit) throws InterruptedException {
+        return exec.awaitTermination(timeout, unit);
+    }
+
+    public List<Runnable> getCancelledTasks() {
+        if (!exec.isTerminated())
+            throw new IllegalStateException();
+        return new ArrayList<>(tasksCancelledAtShutdown);
+    }
+
+    @Override
+    public void execute(Runnable runnable) {
+        exec.execute(() -> {
+            try {
+                runnable.run();
+            } finally {
+                if (isShutdown() && Thread.currentThread().isInterrupted())
+                    tasksCancelledAtShutdown.add(runnable);
+            }
+        });
+    }
+}
+
+// 示例
+public abstract class WebCrawler {
+    private static final long TIMEOUT = 500;
+    private static final TimeUnit UNIT = MILLISECONDS;
+    @GuardedBy("this")
+    private final Set<URL> urlsToCrawl = new HashSet<>();
+    private final Map<URL, Boolean> seen = new ConcurrentHashMap<>();
+    private volatile TrackingExecutor exec;
+
+    public WebCrawler(URL startUrl) {
+        urlsToCrawl.add(startUrl);
+    }
+
+    public synchronized void start() {
+        exec = new TrackingExecutor(Executors.newCachedThreadPool());
+        for (URL url : urlsToCrawl)
+            submitCrawlTask(url);
+        urlsToCrawl.clear();
+    }
+
+    public synchronized void stop() throws InterruptedException {
+        try {
+            saveUncrawled(exec.shutdownNow());
+            if (exec.awaitTermination(TIMEOUT, UNIT))
+                saveUncrawled(exec.getCancelledTasks());
+        } finally {
+            exec = null;
+        }
+    }
+
+    protected abstract List<URL> processPage(URL url);
+
+    private void saveUncrawled(List<Runnable> uncrawled) {
+        for (Runnable task : uncrawled)
+            urlsToCrawl.add(((CrawlTask) task).getPage());
+    }
+
+    private void submitCrawlTask(URL u) {
+        exec.execute(new CrawlTask(u));
+    }
+
+    private class CrawlTask implements Runnable {
+        private final URL url;
+        private int count = 1;
+
+        CrawlTask(URL url) {
+            this.url = url;
+        }
+
+        boolean alreadyCrawled() {
+            return seen.putIfAbsent(url, true) != null;
+        }
+
+        void markUncrawled() {
+            seen.remove(url);
+            System.out.printf("marking %s uncrawled%n", url);
+        }
+
+        @Override
+        public void run() {
+            for (URL link : processPage(url)) {
+                if (Thread.currentThread().isInterrupted())
+                    return;
+                submitCrawlTask(link);
+            }
+        }
+
+        public URL getPage() {
+            return url;
+        }
+    }
+}
+```
+
+### 7.3 处理非正常的线程终止
+
+在并发程序中, 某个线程发生异常很可能被忽略, 这造成的后果有可能是良性的, 也有可能是恶性的, 这取决于终止线程所做的工作
+
+当一个线程由于为捕获异常而退出时, JVM会把这个事件报告给应用程序提供的UncaughtExceptionHandler异常处理器, 如果没有提供异常处理器, 那么默认是将栈追踪信息输出到System.err
+
+``` java
+@FunctionalInterface
+public interface UncaughtExceptionHandler {
+	void uncaughtException(Thread t, Throwable e);
+}
+```
+
+异常处理器如何处理取决于对服务质量的需求, 最常见的使用方式是将错误信息写入日志, 尝试重新启动线程, 关闭应用程序等
+
+在运行时间较长的应用程序中,  通常会为所有线程未捕获异常提供同一个异常处理器, 并且将异常信息记录到日志中
+
+如果要为线程池中所有线程设置一个UncaughtExceptionHandler, 需要为线程池提供一个自定义的ThreadFactory
+
+只有通过execute提交的任务将会被异常处理器处理, submit提交的任务会被Future.get封装在ExecutionException中重新抛出
+
+### 7.4 JVM关闭
+
+JVM可以正常关闭, 也可以异常关闭
+
+#### 7.4.1 关闭钩子
+
+在正常关闭中, JVM会先调用所有已注册的钩子, 关闭钩子是指通过Runtime.getRuntime().addShutdownHook注册的但是尚未开启的线程, JVM不保证钩子的调用顺序
+
+关闭钩子是并行执行, 一定要保证关闭钩子的线程安全, 小心死锁问题
+
+#### 7.4.2 守护线程
+
+守护线程与普通线程之间的区别在于, 守护线程不会阻碍JVM的关闭
+
+#### 7.4.3 终结函数
+
+除回收堆外内存外, 避免使用终结器
