提交13章笔记

--- a/Java/Thinking-In-Java/第13章 字符串.md
+++ b/Java/Thinking-In-Java/第13章 字符串.md
@@ -93,3 +93,36 @@ String s4 = s1.toLowerCase();
 // true
 System.out.println(s3 == s4);
 ```
+
+## 13.5 格式化输出
+
+1. JavaSE5推出了类似于C语言中printf()风格的格式化输出
+
+``` java
+public static void main(String[] args) {
+	int x = 5;
+	double y = 5.332542;
+	// The old way:
+	System.out.println("Row 1: [" + x + " " + y + "]");
+	// The new way:
+	System.out.format("Row 1: [%d %f]\n", x, y);
+	// or
+	System.out.printf("Row 1: [%d %f]\n", x, y);
+}
+```
+
+2. 所有的格式化输出都由java.util.Formatter类处理
+
+3. 常用类型转换
+
+ 选项 | 说明
+ :----: | :----:
+d | 整数型(十进制)
+c | Unicode字符
+b | Boolean值
+s | String
+f | 浮点数(十进制)
+e | 费点数(科学计数)
+x | 整数型(十六进制)
+h | 散列码
+% | 字符%
