提交java 并发编程实战 第14章笔记

--- a/Java/Java-Concurrency-in-Practice/第14章 构建自定义的同步工具.md
+++ b/Java/Java-Concurrency-in-Practice/第14章 构建自定义的同步工具.md
@@ -2,6 +2,12 @@
 
 ### 14.1 状态依赖性的管理
 
+1. 在单线程程序中调用一个方法时, 如果某个基于状态的条件未得到满足(例如连接池必须非空), 那么这个条件将无法成真, 因此在编写顺序程序中的类时, 要使得他们的前提条件未被满足时就失败. 但在并发程序中, 基于状态的条件可能由于其它线程的操作而改变.
+
+2. 对于并发对象上状态依赖的方法, 虽然有时候在前提条件不满足的情况下不会失败, 但通常有一个更好的选择, 即等待前提条件为真.
+
+3. 构成前提条件的状态变量必须由对象的锁来保护, 从而使它们在测试前提条件的同时保持不变. 如果前提条件不满足, 就必须释放锁, 以便其他线程可以修改对象的状态, 否则前提条件永远无法为真, 在再次测试前提条件之前, 必须重新获取锁.
+
 可阻塞的状态依赖操作结构
 
 ``` java
@@ -59,3 +65,239 @@ public abstract class BaseBoundedBuffer<V> {
     }
 }
 ```
+
+#### 14.1.1 示例: 将前提条件的失败传递给调用者
+
+``` java
+@ThreadSafe
+public class GrumpyBoundedBuffer<V> extends BaseBoundedBuffer<V> {
+    public GrumpyBoundedBuffer() {
+        this(100);
+    }
+
+    public GrumpyBoundedBuffer(int size) {
+        super(size);
+    }
+
+    public synchronized void put(V v) throws BufferFullException {
+        if (isFull())
+            throw new BufferFullException();
+        doPut(v);
+    }
+
+    public synchronized V take() throws BufferEmptyException {
+        if (isEmpty())
+            throw new BufferEmptyException();
+        return doTake();
+    }
+}
+
+class ExampleUsage {
+    private GrumpyBoundedBuffer<String> buffer;
+    int SLEEP_GRANULARITY = 50;
+
+    void useBuffer() throws InterruptedException {
+        while (true) {
+            try {
+                String item = buffer.take();
+                // use item
+                break;
+            } catch (BufferEmptyException e) {
+                Thread.sleep(SLEEP_GRANULARITY);
+            }
+        }
+    }
+}
+
+class BufferFullException extends RuntimeException {}
+
+class BufferEmptyException extends RuntimeException {}
+```
+
+1. 这种方法通过异常来控制缓存的操作并不可取. 异常应该只用在发生异常条件的情况中. 缓存已满并不是有界缓存的一个异常条件, 就像红灯并不代表交通信号灯出了异常一样. 
+2. 通过ExampleUsage类中对take的调用发现这种方式也强迫调用者必须做好捕获异常的准备, 并且在每次缓存操作时都需要重试. 而且将状态依赖性交给调用者来管理, 那么将导致一些功能无法实现, 例如维持FIFO顺序, 由于迫使调用者重试, 因此失去了谁先到达的信息.
+
+3. 综上所述, 不能将对前提条件的处理交给调用者.
+
+4. 通过ExampleUsage类useBuffer方法也可以不进入休眠状态, 在捕获BufferEmptyException直接在重新调用take方法, 这种方法叫忙等待或自旋等待, 如果缓存很长时间内都不会发生变化, 那么这种方式会消耗大量的CPU时间, 与此相反调用者也可以通过休眠的方式来避免消耗更多的CPU时间, 但是如果缓存的状态在刚调用完sleep之后就发生变化, 那么将不必要的休眠一段时间, 因此调用者必须在两者之间进行选择: 要么容忍自旋导致的CPU时钟周期的浪费, 要么容忍休眠导致的地响应性.
+
+#### 14.1.2 实例: 通过轮询与休眠来实现简单的阻塞
+
+``` java
+@ThreadSafe
+public class SleepyBoundedBuffer<V> extends BaseBoundedBuffer<V> {
+    int SLEEP_GRANULARITY = 60;
+
+    public SleepyBoundedBuffer() {
+        this(100);
+    }
+
+    public SleepyBoundedBuffer(int size) {
+        super(size);
+    }
+
+    public void put(V v) throws InterruptedException {
+        while (true) {
+            synchronized (this) {
+                if (!isFull()) {
+                    doPut(v);
+                    return;
+                }
+            }
+            Thread.sleep(SLEEP_GRANULARITY);
+        }
+    }
+
+    public V take() throws InterruptedException {
+        while (true) {
+            synchronized (this) {
+                if (!isEmpty())
+                    return doTake();
+            }
+            Thread.sleep(SLEEP_GRANULARITY);
+        }
+    }
+}
+```
+
+1. 相较于14.1.1, 这种方式将前提条件完全交由缓存来管理, 但是还是需要在CPU利用率和响应性之间权衡. 休眠时间间隔小, 响应性越高, CPU利用率就越高.
+
+![14-1](https://github.com/ossaw/notes/blob/master/Pictures/jcip/java-concurrency-in-practice-14-1.jpg)
+
+2. 图14-1给出了休眠间隔对响应性的影响: 在缓存中出现可用空间的时刻与线程醒来再次检查的时刻之间可能存在延迟.
+
+
+#### 14.1.3 条件队列
+
+1. 条件队列使得一组线程能够通过某种方式(通常是线程挂起的方式)来等待特定的条件变为真. 传统队列的元素是一个个数据, 而条件队列的元素是一个个等待相关条件为真的线程.
+
+2. 每个Java对象都可以作为一个锁, 每个对象同样可以作为一个条件队列, 并且Object中的wait, notify, notifyAll方法构成了内部条件队列的api. 
+
+3. 对象的内部锁与内部条件队列是相互关联的, 要调用对象X中条件队列的任何一个方法, 必须持有对象X上的锁, 这是因为"等待由状态构成的条件"与"维护状态一致性"这两种机制必须被紧密地绑定在一起: 只有能对状态进行检查时, 才能在某个条件上等待, 并且只有能修改状态时, 才能从条件等待中释放等待的线程.
+
+4. Object.wait方法自动释放锁, 并请求操作系统挂起当前线程, 从而使其它线程能够获得这个锁并修改对象的状态. 当被挂起的线程醒来时, 它将在返回之前重新获取锁.
+
+5. 条件队列相较于轮询和休眠在CPU使用率和响应性两方面做了优化
+
+``` java
+@ThreadSafe
+public class BoundedBuffer<V> extends BaseBoundedBuffer<V> {
+    // CONDITION PREDICATE: not-full (!isFull())
+    // CONDITION PREDICATE: not-empty (!isEmpty())
+    public BoundedBuffer() {
+        this(100);
+    }
+
+    public BoundedBuffer(int size) {
+        super(size);
+    }
+
+    // BLOCKS-UNTIL: not-full
+    public synchronized void put(V v) throws InterruptedException {
+        while (isFull())
+            wait();
+        doPut(v);
+        notifyAll();
+    }
+
+    // BLOCKS-UNTIL: not-empty
+    public synchronized V take() throws InterruptedException {
+        while (isEmpty())
+            wait();
+        V v = doTake();
+        notifyAll();
+        return v;
+    }
+}
+```
+
+### 14.2 使用条件队列
+
+1. 虽然许多规则(例如wait()必须和synchronize和while循环配合使用)都能确保正确使用条件队列, 但是编译器和系统平台并没有强制遵循这些规则.
+
+#### 14.2.1 条件谓词
+
+1. 要想正确使用队列, 关键要找出对象在哪个条件谓词上等待, 如果没有条件谓词, 条件等待机制将无法发挥作用
+
+2. 条件谓词是使某个操作成为状态依赖操作的前提条件. 在有界缓存中, 只有当缓存不为空时, take方法才能执行, 否则必须等待. 对take方法来说, 它的条件谓词就是缓存不为空.
+
+3. 将与条件队列相关联的条件谓词以及在这些条件谓词上等待的操作都写入文档
+
+4. 在条件等待中存在一个重要的三元关系, 包括加锁, wait方法和一个条件谓词. 在条件谓词中包含多个状态变量, 而状态变量由一个锁来保护, 因此在测试条件谓词之前必须持有这个锁, 所对象与条件队列对象(即调用wait和notify等方法所在的对象)必须是同一个对象.
+
+5. 当线程从wait方法中被唤醒时, 它在重新获取锁时不具有任何特殊的优先级, 而要与任何其它尝试进入同步代码块的线程一起正常地在锁上竞争
+
+6. 每一次wait调用都会隐式地与特定的条件谓词关联起来. 当调用某个特定条件谓词的wait时, 调用者必须已经持有与条件队列相关的锁, 并且这个锁必须保护者构成条件谓词的状态变量
+
+#### 14.2.2 过早唤醒
+
+1. wait方法的返回并不一定意味着线程正在等待的条件谓词已经成真
+
+2. 内置的条件队列可以与多个条件谓词一起使用. 当一个线程由于调用notifyAll而醒来时, 并不意味着该线程正在等待的条件谓词已经成真,(就像烤面包机和咖啡机共用一个铃声, 当响铃后, 你必须查看是哪个设备发出的铃声). 此外, wait还可以假装返回(伪唤醒), 而不是由于某个线程调用了notify或者notifyAll.
+
+3. 在发出notifyAll时, 条件谓词可能已经变成真, 但是在重新获取锁是再次变为假, 在线程wait返回之后重新获取锁的这段时间里可能有其它线程已经获取了这个锁, 并修改了条件谓词. 或者条件谓词从调用wait起就根本没有变成真, 你不知道另一个线程为什么调用notify或者notifyAll, 也许是因为条件队列相关的另一个条件谓词变成真了. 一个条件队列与多个条件谓词相关是很常见的情况. 这种情况建议使用显式的Condition对象
+
+4. 基于3所述, 每当线程从wait中唤醒后, 必须再次测试条件谓词, 如果条件谓词不为真, 那么就继续等待, 由于线程在条件谓词不为真的情况下反复醒来, 因此必须在一个循环中调用wait(这也是使用while而不是if的原因)
+
+``` java
+// 条件等待的标准形式
+void stateDependentMethod() throws InterruptedException {
+	// 必须通过一个锁来保护条件谓词
+	synchronized (lock) {
+		while (!conditionPredicate) {
+			lock.wait();
+		}
+		// 现在对象处于一个合适的状态
+	}
+}
+```
+
+* 当使用条件等待时(Object.wait()或Condition.await())时: 
+	1. 通常有一个条件谓词, 包括一些对象状态的测试, 线程在执行前必须首先通过这些测试
+	2. 在调用wait之前测试条件谓词, 并且在wait中返回之后再次进行测试
+	3. 在一个循环中调用wait
+	4. 确保使用与条件队列相关的锁来保护构成条件队列的各个状态变量
+	5. 在调用wait, notify, notifyAll等方法时, 一定要持有与条件队列相关的锁
+	6. 在检查条件谓词之后一节开始执行相应操作之前, 不要释放锁
+
+#### 14.2.3 丢失的信号
+
+1. 丢失的信号是指: 线程必须等待一个已经为真的条件, 但在开始等待之前没有检查条件谓词. 如果按照条件等待的标准形式来写, 不会出现丢失信号的问题
+
+#### 14.2.4 通知
+
+1. 每当在等待一个条件时, 一定要确保在条件谓词变为真时通过某种方式发出通知
+
+2. 无论是调用notify或者notifyAll都必须持有与条件队列对象相关的锁
+
+3. 由于多个线程可以基于不同的条件谓词在一个条件队列上等待, 因此使用notify而不是notifyAll, 将会很危险, 单一的通知会造成类似于丢失信号的问题
+
+4. 只有同时满足以下两个条件时, 才能用notify而不是notifyAll: 
+	1. 所有等待的线程类型都相同. 只有一个条件谓词与条件队列相关, 并且每个线程在从wait返回后将执行相同的操作.
+	2. 单进单出. 在条件变量上的每次通知, 最多只能唤醒一个线程来执行.
+
+5. 通常notify要比notifyAll要性能好一些
+
+6. 对于有界条件队列还可以使用条件通知
+
+``` java
+public synchronized void alternatePut(V v) throws InterruptedException {
+	while (isFull())
+		wait();
+	boolean wasEmpty = isEmpty();
+	doPut(v);
+	// 在put之后判断只有在put之前队列为空时在进行通知
+	if (wasEmpty)
+		notifyAll();
+}
+```
+
+#### 14.2.5 示例: 阀门类
+
+略
+
+#### 14.2.6 子类安全性问题
+
+略
+
+### 14.3 显式的Condition对象
