--- a/Java/Thinking-In-Java/第13章 字符串.md
+++ b/Java/Thinking-In-Java/第13章 字符串.md
@@ -115,6 +115,7 @@ public static void main(String[] args) {
 
 3. 常用类型转换
 
+
  选项 | 说明
  :----: | :----:
 d | 整数型(十进制)
@@ -126,3 +127,7 @@ e | 费点数(科学计数)
 x | 整数型(十六进制)
 h | 散列码
 % | 字符%
+
+## 13.6 正则表达式
+
+1. 如果要多次使用正则表达式，则将其编译一次并重新使用它将比每次调用String.matches(String regex)方法更有效。
